css/style.css
/* ********************************************* */
/* HEADER */
/* ********************************************* */

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.8rem 3.2rem;
  background-color: #fdebf1;
  position: relative;
  height: 8.5rem;
}

/* make logo in header a little bit bigger */
.header .logo{
  font-size: 5.2rem;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 1.8rem;
  font-size: 1.8rem;
  font-weight: 500;
  align-items: center;
}

.nav-link:link,
.nav-link:visited {
  text-decoration: none;
  display: block;
  padding: 1.2rem;
  color: inherit;
  transition: all 0.3s ease-in;
}

.nav-link:hover,
.nav-link:active {
  color: #ed3376;
}

/* MOBILE NAVIGATION */
.btn-mobile-nav {
  border: none;
  background: none;
  cursor: pointer;
  font-size: 4.8rem;
  color: #333;
  display: none;
}

.btn-mobile-nav a:link,
.btn-mobile-nav a:visited {
  color: inherit;
  transition: 0.3s all ease;
}

.btn-mobile-nav a:hover,
.btn-mobile-nav a:active {
  color: #ed3376;
}

.nav-close-button {
  display: none;
}

.sticky-nav {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 8rem;
  padding-top: 0;
  padding-bottom: 0;
  background-color: rgba(255,255,255, 0.95);
  z-index: 999;
  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
}

/* STICKY NAVIGATION */

/* ********************************************* */
/* HERO SECTION */
/* ********************************************* */

.section-hero {
  background-color: #fdebf1;
  padding: 4.8rem 0 9.6rem 0;
}

.hero {
  max-width: 114rem;
  margin: 0 auto;
  padding: 0 3.2rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 9.6rem;
  align-items: center;
}

.hero-img {
  width: 100%;
}

.hero-text-box {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.button-container {
  display: flex;
  gap: 3rem;
}

.hero-paragraph {
  font-size: 1.8rem;
  line-height: 1.05;
}

/* ********************************************* */
/* HOW IT WORKS SECTION */
/* ********************************************* */
.how-it-works {
  padding: 4.8rem 0 9.6rem 0;
}

.z-pattern-box {
  gap: 6.4rem;  
  margin-bottom: 9.6rem;
}

div.z-pattern-box:nth-child(3) {
  margin-bottom: 0;
}

.z-img {
  align-self: center;
  justify-self: center;
  width: 80%;
}

.z-text-box {
  display: flex;
  flex-direction: column; 
  gap: 3rem;
  justify-content: center;
  /* align-items: center; */
}

.z-text {
  font-size: 2rem;
}

.z-right {
  grid-column: 2; 
  grid-row: 1;
}

/* ********************************************* */
/* TESTIMONIALS SECTION */
/* ********************************************* */

.testimonials-section {
  background-color: #fdebf1;
  padding: 8rem 0 9.6rem 0;
}

.testimonial-grid {
  gap: 9.6rem;
}

.testimonial-card {
  display: flex;
  flex-direction: column;
  gap: 2.4rem;
  align-items: center;
  justify-content: center;
}

.testimonial-img {
  width: 50%;
  border-radius: 50%;
}

.star-rate {
  color: #ed3376;
  width: 3rem;
  height: 3rem;
}

.testimonial-description {
  font-size: 1.8rem;
}

.testimonial-name {
  font-size: 1.6rem;
    font-weight: 500;
  color: #2f0a18;
}

.job-title {

  color: #470f23;
}

/* ********************************************* */
/* HIGHLIGHTS SECTION */
/* ********************************************* */

.highlights-section {
  padding: 4.8rem 0 4.8rem 0;
}

.highlights-cards {
  gap: 3rem; 
  padding-top: 4.8rem;
}

.highlights-card {
  display: flex;
  flex-direction: column;
  border-radius: 9px;
  overflow: hidden;
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
  transition: all 0.3s ease-in;
}

.highlights-card:hover {
  transform: translateY(-8px);
}

.card-img {
  width: 100%;
}

.card-body {
  padding: 2rem 2rem 0 2rem;
}

.card-heading {
  font-size: 1.6rem;
  padding: 1.8rem 0;
}

.card-description {
  font-size: 1.6rem;
  line-height: 1.05;
}

.card-link:link,
.card-link:visited {
  align-self: center;
  text-decoration: none;
  font-size: 1.6rem;
  color: #ed3376;
  font-weight: 500;
  padding: 1.8rem 4rem;
  border: 4px solid #ed3376;
  border-radius: 9px;
  margin: 2rem 0;
  text-transform: uppercase;
  transition: all 0.3s ease-in;
  background-color: #fdebf1;
}

.card-link:hover,
.card-link:active {
  color: #d52e6a;
  border: 4px solid #d52e6a;
  background-color: #fff;
}

/* ********************************************* */
/* CALL TO ACTION SECTION */
/* ********************************************* */
.cta-section {
  padding: 3.2rem 0 9.6rem 0;
}

.cta-section .heading-secondary {
  margin-bottom: 4.8rem;
}

.cta-grid {
  display: grid;
  grid-template-columns: 60fr 40fr;
  /* gap: 9.6rem; */
  background-color: #f2709f;
  border-radius: 9px;
  /* make image round */
  overflow: hidden;
  color: #5f142f;
}

.cta-grid *:focus {
  outline: none;
  box-shadow: 0 0 0 0.8rem rgba(250,194,214,1.000);
}

.cta-form div {
  margin: 3rem;
}

.cta-form label {
  display: inline-block;
  font-size: 1.6rem;
  margin-bottom: 1.2rem;
  padding-left: 0.4rem;
  font-weight: 500;
}

.cta-form input,
.cta-form textarea {
  width: 100%;
  padding: 1rem;
  border: none;
  border-radius: 9px;
  background-color: #fef7fa;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
  font-family: 'Rubik', sans-serif;
  font-size: 1.6rem;
}

.cta-form input::placeholder
.cta-form textarea::placeholder {
  color: #aaa;
}
.cta-button button {
  padding: 1.6rem 3.2rem;
  border: none;
  border-radius: 9px;
  font-size: 1.6rem;
  font-weight: 500;
  color: #fff;
  background-color: #5f142f;
  transition: all 0.3s ease;
}

.cta-button button:hover,
.cta-button button:active {
  background-color: #fff;
  color: #333;
}

.cta-img {
  background: url('../img/woman-posing.jpg');
  background-size: cover;
  background-position: center;
}

/* ********************************************* */
/* FOOTER */
/* ********************************************* */

.footer {
  padding: 6.4rem 0;
  background-color: #fdebf1;
}

.grid-footer {
  display: grid;
  grid-template-columns: 32.5fr 32.5fr 17.5fr 17.5fr;
  gap: 3rem;
}

.logo-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2rem;
}

.address-col, .nav-col {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 2rem;
}

.footer-social-links {
  list-style: none;
  display: flex;
  gap: 3rem;
}

.footer-social-link {
  font-size: 3rem;
  cursor: pointer;
  transition: all 0.3s ease;
}

.footer-social-link:hover {
  color: #ed3376;
}

.footer-heading {
  font-size: 1.8rem;
  font-weight: 500;
}

.copyright {
  font-size: 1.6rem;
}

.footer-link:link,
.footer-link:visited {
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  color: inherit;
  cursor: pointer;
  transition: all 0.3s ease;
}

.footer-link:hover,
.footer-link:active {
  color: #ed3376;
  font-weight: 500;
}

.address {
  font-size: 1.6rem;
}

